--- a/calculatrice.ui
+++ b/calculatrice.ui
@@ -673,6 +673,19 @@
      <string>Backspace</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="complexeBox">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>70</y>
+      <width>70</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Complexe</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
