--- a/calculatrice.ui
+++ b/calculatrice.ui
@@ -628,7 +628,7 @@
      <string>Envoyer</string>
     </property>
     <property name="shortcut">
-     <string>Enter, Return</string>
+     <string>Return</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="entreeTxt">
