--- a/calculatrice.ui
+++ b/calculatrice.ui
@@ -16,7 +16,7 @@
   <property name="minimumSize">
    <size>
     <width>530</width>
-    <height>245</height>
+    <height>130</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -44,15 +44,33 @@
     <property name="currentIndex">
      <number>-1</number>
     </property>
+    <property name="tabsClosable">
+     <bool>true</bool>
+    </property>
+    <property name="movable">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="addTab">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>0</y>
-      <width>31</width>
+      <x>510</x>
+      <y>20</y>
+      <width>21</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>16777215</width>
+      <height>260</height>
+     </size>
     </property>
     <property name="text">
      <string>+</string>
@@ -739,22 +757,5 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections>
-  <connection>
-   <sender>actionClavier</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>widgetCalvier</receiver>
-   <slot>setHidden(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>262</x>
-     <y>179</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
